News
====

Pyclewn 2.2
-----------

.. April 27, 2015

Bug fixes
^^^^^^^^^

* Issue #25: Print the return value when the inferior stops after 'finish'.

* Issue #26: Fix Pyclewn failure to start when gdb is configured with
  ``enable-targets=all``.

* Issue #27: File name completion is now available before gdb has been
  started. This fixes a regression introduced in 2.1 by the full gdb
  completion feature.

Pyclewn 2.1
-----------

.. April 3, 2015

New features
^^^^^^^^^^^^

* Full gdb completion is now available on Vim command line. See
  ``:help gdb-completion``.

* The console and the Pyclewn buffers are loaded in windows of a dedicated tab
  page when the ``--window`` option is set to ``usetab``. See
  ``help pyclewn-usetab``.

* The new command ``Cexitclewn`` closes the debugging session and removes the
  Pyclewn buffers and their windows (issue #20).

* Two new key mappings are available in the breakpoints window. Use ``+`` to
  toggle the breakpoint state between enable/disable, and use ``<C-K>`` to
  delete the breakpoint.

* The new vim.ping() function may be used to check whether an existing Python
  process may be attached to.

Changes
^^^^^^^

* Many improvements to the handling of the Pyclewn windows (issue #17).

* No windows are created when the ``--window`` option is set to ``none``.

Bug fixes
^^^^^^^^^

* Issue #6: Fix the crash in Pyclewn versions 2.0 and 2.0.1 when trying to
  attach to a remote gdb.

* Issue #12: Prevent Pyclewn from running with an obsolete version of its Vim
  run time files.

* Issue #13: Fix the error messages after ``:Pyclewn pdb`` failure.

* Issue #14: tmux can be used now with the ``terminal`` option, e.g.
  ``--terminal=tmux,split-window``.

* Issue #15: The clewn buffers are now emptied after the ``Cquit`` command.

* Issue #18: Create the windows layout upon starting Pyclewn. The windows
  layout is still created upon the first command instead, when Pyclewn is
  started with ``python -m clewn --window=usetab``.
